--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,20 @@
-<div class="container mt-3 mb-5">
-  <%= link_to "Mobius Playground", root_path %>
-  <span class="float-right">
-    <% if user_signed_in? %>
-      <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-    <% end %>
-  </span>
-</div>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+  <%= link_to "Mobius Playground", root_path, class: 'navbar-brand' %>
+  <button class="navbar-toggler" type="button"
+    data-toggle="collapse" data-target="#navbarsExampleDefault"
+                            aria-controls="navbarsExampleDefault" aria-expanded="false"
+                            aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <% if user_signed_in? %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete,
+              class: 'nav-link'%>
+        <% end %>
+      </li>
+    </ul>
+  </div>
+</nav>
