--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -8,7 +8,7 @@
       <%= f.number_field :num_credits, class: 'num-credits', step: :any %>
     </td>
     <td>
-      <%= f.submit %>
+      <%= f.submit 'Send' %>
     </td>
   </tr>
 <% end %>
